[project]
name = "weighbridge"
authors = [
    { name = "Botan Abdullah", email = "botan.b.abdullah@gmail.com"}
]
description = "Weighbridge application to read data from the Serial ports from the PC that is connected to the weighbridge, Google Chrome must be used. No API or server connection is required. This app is working on the client side only. "
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
